# aws-nitro-enclaves-sdk-c

./: .gitignore  Cargo.toml  Dockerfile.al2  README.md  RESTRUCTURE.md  build.sh  docker-build-fresh.sh  docker-build.sh
kmstool-enclave/: Cargo.toml
kmstool-enclave-cli/: Cargo.toml
kmstool-enclave/src/: main.rs
kmstool-instance/: Cargo.toml
kmstool-instance/src/: main.rs
nitro-enclaves-ffi/: build.rs
nitro-enclaves-ffi/src/: lib.rs
rust-nitro-enclaves-kms-tools/: Dockerfile.al2  docker-build-fresh.sh  docker-build.sh
rust-nitro-enclaves-kms-tools/kmstool-enclave-cli/src/: main.rs
rust-nitro-enclaves-kms-tools/kmstool-enclave/src/: main.rs
rust-nitro-enclaves-kms-tools/kmstool-instance/: Cargo.toml
rust-nitro-enclaves-kms-tools/kmstool-instance/src/: main.rs
rust-nitro-enclaves-kms-tools/nitro-enclaves-ffi/: Cargo.toml  build.rs  wrapper.h
rust-nitro-enclaves-kms-tools/nitro-enclaves-ffi/src/: lib.rs
