[workspace]
members = [
    "nitro-enclaves-ffi",
    "kmstool-enclave-cli",
    "kmstool-enclave",
    "kmstool-instance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/aws/aws-nitro-enclaves-sdk-c"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
hex = "0.4"