[package]
name = "kmstool-enclave-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kmstool_enclave_cli"
path = "src/main.rs"

[dependencies]
nitro-enclaves-ffi = { path = "../nitro-enclaves-ffi" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }