[package]
name = "nitro-enclaves-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
pkg-config = "0.3"

[lib]
name = "nitro_enclaves_ffi"
crate-type = ["lib"]